# quant

./: .gitignore  ATR_WFO_TQQQ_improvement_analysis.md  ATR_WFO_TQQQ_improvement_strategies.md  CLAUDE.md  PLAN_spread_model_alternatives.md  PROJECT_ANALYSIS_REPORT.md  README.md  TEST_SUMMARY.md  TODO.md  TQQQ.md  backtest_research_log.md  backtest_strategy_architecture.md  backtest_strategy_improvement_notes.md  buffer_zone_tqqq_improvement_log.md  check_code.py  cross_asset_validation_plan.md  fix_trailing_zeros.py  main.py  overfitting_and_strategy_monitoring_guide.md  pyproject.toml  pyrightconfig.json  pytest.ini  run_tests.sh  streamlit_component_tooltip_guide.md  validate_project.py
.claude/: settings.local.json
.claude/commands/: commit.md
.claude/output-styles/: korean-response.md
backtesting/: __init__.py  data_loader.py  engine.py  executor.py  parallel_runner.py
backtesting/analysis/: __init__.py  comparator.py  metrics.py
backtesting/strategies/: __init__.py  base.py  buyandhold.py  seasonal.py
data/raw/: QQQ_max.csv  TQQQ_max.csv  TQQQ_synthetic_2001-01-01_max.csv  federal_funds_rate_monthly.csv  grid_results.csv  walkforward_results.csv
docs/: CLAUDE.md  PLAN_hold_days_plateau_analysis.md  PLAN_param_plateau_analysis.md  PLAN_portfolio_experiment.md  backtest_code_review_detailed.md  cross_asset_validation_plan.md  cross_asset_validation_results.md  hold_days_2_experiment_results.md  overfitting_analysis_report.md  post_refactoring_test_guide.md  recent_months_removal_impact_report.md  refactoring.md  strategy_validation_report.md  tranche_architecture.md  tranche_design.md  tranche_final_recommendation.md  walkforward_logic.md  wfo_policy_and_strategy_lifecycle.md
docs/archive/: CURRENT_TEST_STATUS.md  FINAL_TEST_SUMMARY.md  PLAN_add_pyright_validation.md  PLAN_backtest_accuracy_p0_p1.md  PLAN_csv_value_to_decimal.md  PLAN_ffr_cache.md  PLAN_ffr_validation_to_business_layer.md  PLAN_fix_poetry_commands_and_type_ignores.md  PLAN_fix_test_expense_values.md  PLAN_integrate_quality_checks.md  PLAN_move_tqqq_constants.md  PLAN_move_tqqq_data_loaders.md  PLAN_move_validation_to_business_layer.md  PLAN_numpy_errstate_debug.md  PLAN_pandas_streamlit_optimization.md  PLAN_pyright_single_source_of_truth.md  PLAN_rate_spread_lab_csv_improvement.md  PLAN_rate_spread_lab_ui_improvement.md  PLAN_simplify_cov_option.md  PLAN_streamlit_daily_comparison_refactor.md  (+18 more)
results/: grid_results.csv  tqqq_daily_comparison.csv  tqqq_validation.csv
scripts/: CLAUDE.md  create_duckdb_cache.py  download_data.py  generate_synthetic_tqqq.py  generate_tqqq_daily_comparison.py  run_backtest.py  run_grid_search.py  run_single_backtest.py  run_walkforward.py  streamlit_app.py  validate_tqqq_simulation.py
tests/: CLAUDE.md  README.md  TEST_COMPLETE.md  conftest.py  test_analysis.py  test_atr_comparison.py  test_backtest_engine.py  test_backtest_walkforward.py  test_buffer_zone.py  test_buffer_zone_contracts.py  test_buffer_zone_dual_ticker.py  test_buffer_zone_execution_rules.py  test_buffer_zone_helpers.py  test_buffer_zone_qqq.py  test_buffer_zone_run.py  test_buffer_zone_tqqq.py  test_buy_and_hold.py  test_cli_helpers.py  test_cpcv.py  test_csv_export.py  test_data_loader.py  test_donchian_helpers.py  test_engine_common.py  test_formatting.py  test_integration.py  test_logger.py  test_meta_manager.py  test_numpy_warnings.py  test_parallel_executor.py  test_parameter_stability.py  test_portfolio_backtest_scenarios.py  test_portfolio_configs.py  test_portfolio_execution.py  test_portfolio_planning.py  test_portfolio_strategy.py  test_portfolio_strategy_types.py  test_split_strategy.py  test_stock_downloader.py  test_strategy.py  test_strategy_interface.py  (+18 more)
(+714 files in other folders)
