[tool.poetry]
name = "quant-backtest"
version = "0.1.0"
description = "Stock backtesting framework with DuckDB and CSV data management"
packages = [{include = "qbt", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
yfinance = "^0.2.0"
matplotlib = "^3.7.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["qbt"]

