[tool.poetry]
name = "quant-backtest"
authors = ["Yubeen"]
version = "0.1.0"
description = "Stock backtesting framework with DuckDB and CSV data management"
packages = [{include = "qbt", from = "src"}]

[tool.poetry.dependencies]
python = "~3.12"
pandas = "^2.0.0"
yfinance = "^0.2.0"
matplotlib = "^3.7.0"
streamlit = "^1.30.0"
plotly = "^5.18.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
ruff = "^0.8.0"
mypy = "^1.0.0"
pandas-stubs = "^2.0.0"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
freezegun = "^1.5.5"
plotly-stubs = "^0.1.2"
pyright = "^1.1.407"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py312']

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long은 Black 스타일 존중
]

[tool.ruff.lint.isort]
known-first-party = ["qbt"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
disallow_any_unimported = true

# stub이 없는 라이브러리 허용
[[tool.mypy.overrides]]
module = ["yfinance", "streamlit"]
ignore_missing_imports = true

